# Spine

./: Cargo.toml  README.md  backbone.toml
src/: config.rs  detect.rs  execute.rs  main.rs  tui.rs
