[package]
name = "spine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "spn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
dirs = "5.0"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "time", "sync"] }
toml = "0.8"
